--- a/CommonServices/CommonServices.csproj
+++ b/CommonServices/CommonServices.csproj
@@ -41,13 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Enums\DatabaseType.cs" />
+    <Compile Include="Domain\Models\InsertRequestResultModel.cs" />
+    <Compile Include="Infrastructure\Db\DatabaseManagerFactory.cs" />
+    <Compile Include="Infrastructure\Db\IDatabaseManager.cs" />
+    <Compile Include="Infrastructure\Db\SqlServerManager.cs" />
     <Compile Include="Infrastructure\Logging\FileLogger.cs" />
     <Compile Include="Infrastructure\Logging\IFileLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Application\" />
-    <Folder Include="Domain\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
