--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,36 @@ services:
       ports:
         - "1433:1433"
       volumes:
-        - ./init.sql:/init.sql
+        - ./initmssql.sql:/initmssql.sql
       entrypoint:
         - /bin/bash
         - -c
         - |
           /opt/mssql/bin/sqlservr & sleep 30
-          /opt/mssql-tools18/bin/sqlcmd -U sa -P $MSSQL_SA_PASSWORD -d master -C -i /init.sql
+          /opt/mssql-tools18/bin/sqlcmd -U sa -P $MSSQL_SA_PASSWORD -d master -C -i /initmssql.sql
           sleep infinity
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres_db
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_DB: Reservations
+    env_file:
+        - .env
+    ports:
+        - "5432:5432"
+    volumes:
+        - ./initpostgresql.sql:/docker-entrypoint-initdb.d/initpostgresql.sql
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq_local
+    ports:
+      - "5672:5672"     # Port for RabbitMQ connections
+      - "15672:15672"   # Port for RabbitMQ Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    
