--- a/CommonServices/CommonServices.csproj
+++ b/CommonServices/CommonServices.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=8.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Extensions.Logging.Abstractions.8.0.0\lib\net462\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Npgsql, Version=8.0.5.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\Npgsql.8.0.5\lib\netstandard2.0\Npgsql.dll</HintPath>
     </Reference>
@@ -94,8 +97,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\Enums\DatabaseType.cs" />
+    <Compile Include="Domain\Models\MessageContentModel.cs" />
     <Compile Include="Domain\Models\StoreResultToDb.cs" />
     <Compile Include="Domain\Models\MessageModel.cs" />
+    <Compile Include="Domain\Queue\QueueNames.cs" />
     <Compile Include="Infrastructure\Db\DatabaseManagerFactory.cs" />
     <Compile Include="Infrastructure\Db\IDatabaseManager.cs" />
     <Compile Include="Infrastructure\Db\PostgreSqlManager.cs" />
