--- a/SuccessService/SuccessService.csproj
+++ b/SuccessService/SuccessService.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 	<ItemGroup>
